--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,8 +2,8 @@
   padding: 30px;
   background-color: white;
   border-radius: 10px;
-}
 
-.App h1 {
-  margin-bottom: 20px;
+  h1 {
+    margin-bottom: 20px;
+  }
 }
